--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,44 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.App {
+  display: grid;
+  grid-template-columns: .33fr 1fr .33fr;
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 0px;
+  height: 100vh;
+  padding: .5rem;
+}
+
+.cardLeft {
+  grid-area: 1 / 1 / 3 / 2;
+  padding: .5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 20px;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.3fr .7fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 20px;
+
+}
+
+.cardRight {
+  grid-area: 1 / 3 / 3 / 4;
+  padding: .5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 20px;
+
 }
